--- a/src/components/ContactSection.astro
+++ b/src/components/ContactSection.astro
@@ -8,8 +8,8 @@ import SectionContent from './Atoms/SectionContent.astro';
     <SectionContent>
         <p>メールまたはTwitterにてご連絡ください。</p>
         <p>
-            <i class="fa-solid fa-envelope"></i> メール:
-            <a>aya172957@ayutaso.com</a>
+            メール:
+            <a href="">aya172957@ayutaso.com</a>
         </p>
     </SectionContent>
 </Section>
