--- a/src/components/SkillsSection.astro
+++ b/src/components/SkillsSection.astro
@@ -92,13 +92,15 @@ const skillCardTextStyle = css({
 
 <Section>
     <SectionTitle>Skills</SectionTitle>
-    <h3 class={css({
+    <div class={css({
         "fontSize": "1.2rem",
         "color": "#333",
         "marginBottom": "1rem",
         "textAlign": "center",
+        "fontFamily": "Zen Kaku Gothic New, sans-serif",
+        "fontWeight": "bold",
     })}>Programming Languages
-    </h3>
+    </div>
     <div class={css({
         "display": "grid",
         "gridTemplateColumns": "repeat(auto-fit, minmax(120px, 1fr))",
@@ -159,13 +161,15 @@ const skillCardTextStyle = css({
             <p class={skillCardTextStyle}>Scala</p>
         </div>
     </div>
-    <h3 class={css({
+    <div class={css({
         "fontSize": "1.2rem",
         "color": "#333",
         "marginBottom": "1rem",
         "textAlign": "center",
+        "fontFamily": "Zen Kaku Gothic New, sans-serif",
+        "fontWeight": "bold",
     })}>Frameworks & Libraries
-    </h3>
+    </div>
     <div class={css({
         "display": "grid",
         "gridTemplateColumns": "repeat(auto-fit, minmax(120px, 1fr))",
@@ -226,13 +230,15 @@ const skillCardTextStyle = css({
             <p class={skillCardTextStyle}>Unity</p>
         </div>
     </div>
-    <h3 class={css({
+    <div class={css({
         "fontSize": "1.2rem",
         "color": "#333",
         "marginBottom": "1rem",
         "textAlign": "center",
+        "fontFamily": "Zen Kaku Gothic New, sans-serif",
+        "fontWeight": "bold",
     })}>DataStore & Infra
-    </h3>
+    </div>
     <div class={css({
         "display": "grid",
         "gridTemplateColumns": "repeat(auto-fit, minmax(120px, 1fr))",
@@ -293,13 +299,15 @@ const skillCardTextStyle = css({
             <p class={skillCardTextStyle}>Firebase</p>
         </div>
     </div>
-    <h3 class={css({
+    <div class={css({
         "fontSize": "1.2rem",
         "color": "#333",
         "marginBottom": "1rem",
         "textAlign": "center",
+        "fontFamily": "Zen Kaku Gothic New, sans-serif",
+        "fontWeight": "bold",
     })}>Tools
-    </h3>
+    </div>
     <div class={css({
         "display": "grid",
         "gridTemplateColumns": "repeat(auto-fit, minmax(120px, 1fr))",
