--- a/src/components/Sns/TwitterIcon.astro
+++ b/src/components/Sns/TwitterIcon.astro
@@ -2,7 +2,7 @@
 import { FaTwitter } from "react-icons/fa";
 ---
 
-<a href="https://x.com/aya172957" target="_blank" class="sns-icon">
+<a href="https://x.com/aya172957" target="_blank" class="sns-icon" aria-label="Twitter Profile">
     <FaTwitter />
 </a>
 
