--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,6 +15,7 @@ import '../index.css';
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
+        <meta name=description content="Atotti Ayutaso aya172957 portfolio" />
 		<link rel="icon" type="image/jpg" href="/icon.jpg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>あゆたそどっとこむ</title>
