--- a/src/components/ArticlesSection.astro
+++ b/src/components/ArticlesSection.astro
@@ -6,9 +6,9 @@ import SectionContent from './Atoms/SectionContent.astro';
 <Section>
     <SectionTitle>Articles</SectionTitle>
     <SectionContent>
-        <p><a href="https://tech.monoxer.com/entry/2024/03/29/200924">Monoxer Intern Report #16_文章分割確認ツールの開発</a></p>
-        <p><a>[準備中] APIを使用せずに Django Template 中でReactを使用する方法</a></p>
-        <p><a>[準備中] ICPC2022 アジア大会参加記</a></p>
-        <p><a>[準備中] CyberAgent ACE 2024 で最高に成長できた話</a></p>
+        <p><a href="https://tech.monoxer.com/entry/2024/03/29/200924" target="_blank">Monoxer Intern Report #16_文章分割確認ツールの開発</a></p>
+        <p><a href="">[準備中] APIを使用せずに Django Template 中でReactを使用する方法</a></p>
+        <p><a href="">[準備中] ICPC2022 アジア大会参加記</a></p>
+        <p><a href="">[準備中] CyberAgent ACE 2024 で最高に成長できた話</a></p>
     </SectionContent>
 </Section>
