--- a/src/components/Sns/GitHubIcon.astro
+++ b/src/components/Sns/GitHubIcon.astro
@@ -2,7 +2,7 @@
 import { FaGithub } from "react-icons/fa";
 ---
 
-<a href="https://github.com/Atotti" target="_blank" class="sns-icon">
+<a href="https://github.com/Atotti" target="_blank" class="sns-icon" aria-label="GitHub Profile">
     <FaGithub />
 </a>
 
