--- a/src/components/ArticlesSection.astro
+++ b/src/components/ArticlesSection.astro
@@ -6,9 +6,10 @@ import SectionContent from './Atoms/SectionContent.astro';
 <Section>
     <SectionTitle>Articles</SectionTitle>
     <SectionContent>
+        <p><a href="https://zenn.dev/ayutaso/articles/d7c6a154edfa02" target="_blank">2週間で“あれまぁTV”を作った！サイバーエージェント『ACE』インターン記録</a></p>
         <p><a href="https://tech.monoxer.com/entry/2024/03/29/200924" target="_blank">Monoxer Intern Report #16_文章分割確認ツールの開発</a></p>
+        <p><a href="https://tottiweblog.hatenablog.com/entry/2023/12/29/021605" target="_blank">2023年(学部2年)に取り組んだ事</a></p>
         <p><a href="">[準備中] APIを使用せずに Django Template 中でReactを使用する方法</a></p>
         <p><a href="">[準備中] ICPC2022 アジア大会参加記</a></p>
-        <p><a href="">[準備中] CyberAgent ACE 2024 で最高に成長できた話</a></p>
     </SectionContent>
 </Section>
