Add bussines card

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import BusinessCard from '../components/BusinessCard.astro';
 import AboutSection from '../components/AboutSection.astro';
 import SkillsSection from '../components/SkillsSection.astro';
 import WorksSection from '../components/WorksSection.astro';
@@ -12,6 +13,7 @@ import Career from '../components/Career.astro';
 ---
 
 <Layout>
+    <BusinessCard />
     <AboutSection />
     <SkillsSection />
     <WorksSection />
