feat: update dependencies and add new sections for awards and publications
- Updated @astrojs/react to version 4.2.4
- Updated astro to version 5.7.4
- Added AwardSection component to display awards
- Added PaperSection component to display publications
- Updated about page with placeholder content
- Modified index page to include new PaperSection and AwardSection components

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,17 +8,21 @@ import ArticlesSection from '../components/ArticlesSection.astro';
 import ContactSection from '../components/ContactSection.astro';
 import SnsIcons from '../components/SnsIcons.astro';
 import Career from '../components/Career.astro';
-
+import PaperSection from '../components/PaperSection.astro';
+import AwardSection from '../components/AwardSection.astro';
+import Award from '../components/Award.astro';
 
 ---
 
 <Layout>
-    <BusinessCard />
     <AboutSection />
+    <BusinessCard />
     <SkillsSection />
     <WorksSection />
-    <ArticlesSection />
+    <PaperSection />
+    <AwardSection />
     <Career />
+    <ArticlesSection />
     <ContactSection />
     <SnsIcons />
 </Layout>
