fix: techbook -> book

--- a/src/components/PaperSection.astro
+++ b/src/components/PaperSection.astro
@@ -19,7 +19,7 @@ import SectionContent from './Atoms/SectionContent.astro';
                     [<a href="https://www.anlp.jp/proceedings/annual_meeting/2025/pdf_dir/Q2-23.pdf" target="_blank">paper</a>, <a>poster</a>]</p>
             </li>
         </ul>
-        <h3>self-published technical book</h3>
+        <h3>self-published book</h3>
         <ul>
             <li>
                 <p>モダンフロントエンドフレームワークAstroで作る個人サイト開発. コミックマーケット105 (2024/12/30)</p>
