--- a/src/components/PaperSection.astro
+++ b/src/components/PaperSection.astro
@@ -9,20 +9,21 @@ import SectionContent from './Atoms/SectionContent.astro';
         <h3>International conference</h3>
         <ul>
             <li>
-                None
+                <p>Ayuto Tsutsumi, Yuu Jinnai. Do Large Language Models Know Folktales? A Case Study of Yokai in Japanese Folktales, ACL2025 Findings (2025/7)
+                    [<a href="https://www.arxiv.org/abs/2506.03619" target="_blank">paper</a>, <a>poster</a>]</p>
             </li>
         </ul>
         <h3>Domestic conference</h3>
         <ul>
             <li>
                 <p>堤歩斗, 陣内佑. LLM は日本の民話を知っているか？ 妖怪知識評価データセットの構築へ向けて. 言語処理学会第31回年次大会(2025/3)
-                    [<a href="https://www.anlp.jp/proceedings/annual_meeting/2025/pdf_dir/Q2-23.pdf" target="_blank">paper</a>, <a>poster</a>]</p>
+                    [<a href="https://www.anlp.jp/proceedings/annual_meeting/2025/pdf_dir/Q2-23.pdf" target="_blank">paper</a>, <a href="/NLP2025.svg">poster</a>]</p>
             </li>
         </ul>
-        <h3>self-published book</h3>
+        <h3>Books</h3>
         <ul>
             <li>
-                <p>モダンフロントエンドフレームワークAstroで作る個人サイト開発. コミックマーケット105 (2024/12/30)</p>
+                <p>モダンフロントエンドフレームワークAstroで作る個人サイト開発. コミックマーケット105 (2024/12)</p>
             </li>
         </ul>
 
