Add: anime section & contents

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,7 +17,8 @@ import '@fontsource/hachi-maru-pop';
     })}>あゆたそどっとこむ</h1>
     <nav>
         <a href="/">ホーム</a> ・
-        <a href="/about">About</a> ・
+        <!-- <a href="/about">About</a> ・ -->
+        <a href="/anime">Anime</a> ・
         <a href="/blog">blog</a>
     </nav>
 </header>
